# OpenGUI

./: .gitattributes  .gitignore  CMakeLists.txt  CopyOgui.bat  GenerateXsd.bat  OpenGUI.runsettings  OpenGUI.sln  meta.json
OGUI_Xsd/: Attribute.cs  OGUI_Xsd.csproj  OGUI_Xsd.sln  Program.cs
OGUI_Xsd/Properties/: Resources.Designer.cs  Resources.resx  launchSettings.json
OGUI_Xsd/Template/: SingleLineTemplate.cs  SwitchTemplate .txt  XmlFactoryClassCpp.txt  XmlFactoryClassH.txt  XmlFactoryCppFile.txt  XmlFactoryHFile.txt
OpenGUICore/: OpenGUICore.cpp  OpenGUICore.vcxproj  OpenGUICore.vcxproj.filters
cmake/: Configure.cmake  DownLoad.cmake  RTTI.cmake
extensions/: CMakeLists.txt
extensions/samplecontrols/: CMakeLists.txt
extensions/samplecontrols/include/: Button.h  CheckBox.h  Configure.h  List.h  SampleControls.h  ScrollView.h  Slider.h
extensions/samplecontrols/include/mako/: build.py
extensions/samplecontrols/res/: sample.css  sample.xml
extensions/samplecontrols/source/: Button.cpp  CheckBox.cpp  List.cpp  SampleControls.cpp  ScrollView.cpp  Slider.cpp
include/: Context.h  VisualElement.h  VisualSystem.h  configure.h
include/Core/: Math.h  Primitive.h  PrimitiveDraw.h  Renderer.h
include/Core/Math/: Fixed.h  Matrix.h  Rotator.h  Transform.h  Vector.h  VectorMath.h
include/OpenGUI/: Configure.h  Context.h  VisualElement.h  VisualElement.inl  VisualSystem.h  VisualWindow.h  meta.h  rtti.generated.h  rtti.h
include/OpenGUI/Animation/: AnimPropertiesDef.h  AnimStyle.h  AnimTypes.h  AnimationPropertiesDef.h  StyleAnimation.h  VisualAnimationSystem.h
include/OpenGUI/Bind/: AttributeBind.h  Bind.h  EventArg.h  EventArgWrapper.h  EventBind.h  any.h
include/OpenGUI/CSSParser/: CSSParser.h
include/OpenGUI/Core/: AsyncBitmap.h  AsyncFile.h  AsyncRenderTexture.h  ColorSpace.h  DynamicAtlasResource.h  IOThread.h  Math.h  Name.h  OName.h  Primitive.h  PrimitiveDraw.h  Renderer.h  StdLog.h  Types.h  nanovg.h  olog.h  open_string.h  value.h
include/OpenGUI/DataBind/: PropertyManager.h
include/OpenGUI/Event/: AnimEvent.h  AttachEvent.h  EventBase.h  EventHandler.h  EventHandler.inl  EventName.h  EventRouter.h  FocusEvent.h  KeyEvent.h  PointerEvent.h
include/OpenGUI/Interface/: FileInterface.h  InputInterface.h  Interfaces.h  RenderInterface.h  SystemInterface.h
include/OpenGUI/Managers/: AtlasManager.h  FontFileManager.h  RenderTextureManager.h
include/OpenGUI/Reflection/: reflection.h
include/OpenGUI/Style/: Style.h  StyleHelpers.h  StylePropertiesDef.h  StyleProperty.h  StyleRule.h  StyleSelector.h  StyleSheet.h  VariantStorage.h  VisualStyleSystem.h
include/OpenGUI/Style2/: AnimTypes.h  ComputedAnim.h  ComputedStyle.h  Forward.h  Parse.h  ParseUtils.hpp  Properties.h  Rule.h  Selector.h  Shadow.h  Transform.h  VisualStyleSystem.h  peglib.h
include/OpenGUI/Text/: AsyncFontFile.h  AsyncGlyph.h  Font.h  FontRendering.h  TextElement.h  TextManager.h  TextServer.h  TextServerFB.h  TextTypes.h
include/OpenGUI/Xml/: GenXmlAttrsDesc.h  GenXmlChildDesc.h  VisualElementAsset.h  XmlAsset.h  XmlAttributeDescription.h  XmlChildElementDescription.h  XmlFactory.h  XmlFactoryRegistry.h  XmlFactoryTool.h  XmlTool.h  XmlTypeRestriction.h
include/OpenGUI/XmlParser/: AttributeBind.h  BaseXmlFactory.h  EventBind.h  TemplateContainer.h  XmlElementFactory.h  XmlParser.h
include/Style/: StyleSheet.h  VariantStorage.h  VisualStyleSystem.h
include/Xml/: XmlChildElementDescription.h
lua-binding/: CMakeLists.txt
lua-binding/codegen/: EnumIntelliSense.lua.mako  FunctionIntelliSense.lua.mako  OGUI.lua.mako  RecordIntelliSense.lua.mako  luaBind.cpp.mako  lua_codegen.py
lua-binding/include/: luaBind.hpp
lua-binding/include/sol/: sol.hpp
lua-binding/source/: luaBind.cpp  luaBind.generated.cpp
meta/: ASTConsumer.cpp  CMakeLists.txt  OptionsParser.cpp  main.cpp  meta.cpp  meta.h  run.bat
samples/webgpu/: CMakeLists.txt
samples/webgpu/include/: webgpu.h  window.h
samples/webgpu/res/: DataBind.css  DataBind.xml  LuaBind.css  (+13 more)
source/: Context.cpp  EventArgWrapper.cpp  EventName.cpp  OpenGUICore.cpp  VisualElement.cpp  VisualElement.h  VisualWindow.cpp  rtti.cpp  rtti.generated.cpp
source/Animation/: AnimStyle.cpp  StyleAnimation.cpp  VisualAnimationSystem.cpp
source/CSSParser/: CSSParser.cpp  InlineStyleParser.cpp  ParseUtils.cpp  ParseUtils.hpp  PropertyParser.cpp  SelectorParser.cpp  css.flex.cpp  css.l  css.tab.c  css.tab.cpp  css.tab.h  css.y  peglib.h
source/Core/: Name.cpp  OpenGUICore.cpp  PrimitiveDraw.cpp  olog.cpp  value.cpp
source/Dummy/: Dummy.cpp
source/Managers/: RenderTextureManager.cpp
source/PrimitiveDraw/: PrimitiveDraw.cpp  nanovg.c  nanovg.cpp  nanovg.h  nanovg_impl.cpp
source/Style/: Style.cpp  StyleProperty.cpp  StyleSelector.cpp  StyleSheet.cpp  VisualStyleSystem.cpp
source/Style2/: AnimValueParser.cpp  ComputedAnim.cpp  ComputedStyle.cpp  DrawValueParser.cpp  LayoutValueParser.cpp  LayoutValueParser.h  MathValueParser.cpp  Parse.cpp  Rule.cpp  Selector.cpp  Transform.cpp  VisualStyleSystem.cpp
source/Text/: FontRendering.cpp  TextElement.cpp
source/Window/: VisualWindow.cpp
source/Xml/: XmlAsset.cpp  XmlAttributeDescription.cpp  XmlFactoryRegistry.cpp  XmlFactoryTool.cpp
source/XmlParser/: AttributeBind.cpp  BaseXmlFactory.cpp  Bind.cpp  EventBind.cpp  XmlElementFactory.cpp  XmlParser.cpp
source/yoga/: Utils.cpp  YGNode.cpp  Yoga.cpp
tests/: CMakeLists.txt
tests/Async/: AsyncHandle.cpp  CMakeLists.txt
tests/Core/: CMakeLists.txt  NameTest.cpp
tests/FontLibs/: CMakeLists.txt  FontLibs.cpp  FreeTypeLib.cpp  FreeTypeLib.h  HBSharper.h
tests/Primitive/: CMakeLists.txt  Draw.cpp  Generation.cpp  StyleRuntime.cpp
tests/Xml/: CMakeLists.txt  XmlParser.cpp  XmlParserTest.xml  XmlParserTest2.xml  XmlParserTest3.xml
tool/: EventArgWrapper.cpp  EventArgWrapper.cpp.mako  EventArgWrapper.h  EventArgWrapper.h.mako  EventName.cpp.mako  EventName.h.mako  event_codegen.py  generate_dummy.py  luaBind.cpp  luaBind.cpp.mako  lua_codegen.py  rtti.cpp.mako  rtti.h.mako  rtti_codegen.py  style_codegen.py
(+140 files in other folders)
